--- a/app/views/backup_mailer/daily_backup.text.erb
+++ b/app/views/backup_mailer/daily_backup.text.erb
@@ -31,5 +31,5 @@ If you ever need to restore your data:
 This backup was automatically generated as part of your backup settings. You can modify these settings anytime by visiting your Settings page.
 
 ---
-This is an automated message from Routine Tracker running on your personal Raspberry Pi at home.local
+This is an automated message from Routine Tracker running on your personal server at <%= ENV.fetch('APPLICATION_HOST', 'home.local') %>
 If you no longer wish to receive these backups, you can disable them in your Settings.
