Renaming Tailscale network

--- a/app/views/backup_mailer/daily_backup.html.erb
+++ b/app/views/backup_mailer/daily_backup.html.erb
@@ -51,7 +51,7 @@
       <p>This backup was automatically generated as part of your backup settings. You can modify these settings anytime by visiting your Settings page.</p>
 
       <div class="footer">
-        <p>This is an automated message from Routine Tracker running on your personal server at <%= ENV.fetch('APPLICATION_HOST', 'home.taile52c2f.ts.net') %></p>
+        <p>This is an automated message from Routine Tracker running on your personal server at <%= ENV.fetch('APPLICATION_HOST', 'home.gila-lionfish.ts.net') %></p>
         <p>If you no longer wish to receive these backups, you can disable them in your Settings.</p>
       </div>
     </div>
